syntax = "proto3";

package post_proto;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = ".;post_proto";

service PostService {
  rpc CreatePost (CreatePostRequest) returns (PostResponse);
  rpc GetPost (GetPostRequest) returns (PostResponse);
  rpc UpdatePost (UpdatePostRequest) returns (PostResponse);
  rpc DeletePost (DeletePostRequest) returns (google.protobuf.Empty);
  rpc ListPosts (ListPostsRequest) returns (ListPostsResponse);
}

message CreatePostRequest {
  string title = 1;
  string description = 2;
  bool is_private = 3;
  repeated string tags = 4;
}

message GetPostRequest {
  string post_id = 1;
}

message UpdatePostRequest {
  string post_id = 1;
  string title = 2;
  string description = 3;
  bool is_private = 4;
  repeated string tags = 5;
}

message DeletePostRequest {
  string post_id = 1;
}

message ListPostsRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message PostResponse {
  string id = 1;
  string title = 2;
  string description = 3;
  string creator_id = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  bool is_private = 7;
  repeated string tags = 8;
}

message ListPostsResponse {
  repeated PostResponse posts = 1;
  int32 total_count = 2;
  int32 page = 3;
  int32 page_size = 4;
}